--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+canna (3.7p3-6.4) unstable; urgency=low
+
+  * Non-maintainer upload.
+  * Drop hardcoded path in postinst
+  * Fix pending l10n issues. Debconf translations:
+    - Vietnamese (Clytie Siddall).  Closes: #548003
+
+ -- Christian Perrier <bubulle@debian.org>  Mon, 12 Apr 2010 08:18:50 +0200
+
 canna (3.7p3-6.3) unstable; urgency=low
 
   * Non-maintainer upload.
