--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+canna (3.7p3-13.1) unstable; urgency=medium
+
+  * Non-maintainer upload to fix FTBFS.
+      Use only autoconf without version suffix.
+
+ -- YunQiang Su <syq@debian.org>  Mon, 05 Oct 2015 17:13:17 +0800
+
 canna (3.7p3-13) unstable; urgency=medium
 
   * QA upload.
