--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+canna (3.7p3-15) unstable; urgency=medium
+
+  * QA upload.
+  * 
+
+ -- Francisco Vilmar Cardoso Ruviaro <francisco.ruviaro@riseup.net>  Mon, 18 May 2020 03:49:59 +0000
+
 canna (3.7p3-14) unstable; urgency=medium
 
   * QA upload.
